add top page demo.

--- a/README.rdoc
+++ b/README.rdoc
@@ -65,3 +65,7 @@ First of all, You have to change admin password in Administration.
 * http://national-holiday-api.heroku.com/api/holidays/list/2013-01-01/2013-12-31
 
 * http://national-holiday-api.heroku.com/api/holidays/is_holiday/2013-01-01
+
+== Top page demo
+
+* http://national-holiday-api.heroku.com
